--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1401,7 +1401,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Misc"
+        "id":"Lainnya"
     },
     "UI.windows.bag.capacity":{
         "en":"Bag Capacity",
