--- a/Translation/general.json
+++ b/Translation/general.json
@@ -10,7 +10,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bang Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"KNB",
         "ar":"",
         "it":"",
         "pl":"",
@@ -82,7 +82,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"KNB",
         "ar":"",
         "it":"",
         "pl":"",
@@ -100,7 +100,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lễ Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lễ Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -136,7 +136,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kinh nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -172,7 +172,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận Thưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -190,7 +190,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phần thưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -208,7 +208,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến sĩ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cung Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pháp Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -262,7 +262,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -298,7 +298,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp độ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -316,7 +316,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"lv",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khóa khi Trang bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -352,7 +352,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khóa khi nhặt lên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -370,7 +370,7 @@
         "de":"",
         "ja":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khóa",
         "ar":"",
         "it":"",
         "pl":"",
